@navikt/core/css/src/data-table.css
/* stylelint-disable no-duplicate-selectors */

.aksel-data-table__border-wrapper {
  /* display:flex and max-height:100% is needed for a "no page scroll" layout */
  display: flex;
  max-height: 100%;
}

.aksel-data-table__scroll-wrapper {
  overflow: auto;
  width: 100%;
  position: relative;
}

.aksel-data-table {
  /*
  We should NOT set min-width:100% b.c. it will cause inconsistencies in column resizing.
  We could discuss whether it matters, though. But it feels buggy.
  Downside is that it looks weird when the table is smaller than the container.
  Maybe we could "manually" resize the other columns so that it fills the container? But that would add a lot of complexity.
  We could have a toggle for the resize feature, and let the consumer decide which downside they prefer. Might need that anyways.
  */

  &[data-layout="fixed"] {
    table-layout: fixed;
    width: 1px; /* This is for some reason needed to make the browser respect the column width. TODO: Test in all browsers */

    /* TODO: review side-effects from this hack */
    min-width: 100%;
  }

  &[data-layout="auto"] {
    min-width: 100%;
  }

  --__axc-data-table-density: var(--ax-space-16);

  &[data-density="condensed"] {
    --__axc-data-table-density: var(--ax-space-8);
  }

  &[data-density="spacious"] {
    --__axc-data-table-density: var(--ax-space-32);
  }

  &[data-zebra-stripes="true"] {
    & .aksel-data-table__tbody :where(.aksel-data-table__tr:nth-child(odd)) {
      background-color: var(--ax-bg-neutral-softA);
    }
  }
}

.aksel-data-table__thead {
  background-color: var(--ax-bg-raised);
}

.aksel-data-table__tbody {
  background-color: var(--ax-bg-raised);
}

.aksel-data-table__tr {
  &[data-selected="true"] {
    background-color: var(--ax-bg-softA);
  }

  .aksel-data-table__thead &[data-sticky="true"] {
    position: sticky;
    top: 0;
    z-index: 3;
  }
}

/* BORDER STYLING START */

.aksel-data-table__border-wrapper {
  border-radius: var(--ax-radius-12);
  overflow: hidden;
  position: relative;

  &::after {
    content: "";
    position: absolute;
    inset: 0;
    pointer-events: none;
    border: 1px solid var(--ax-border-neutral-subtle);
    border-radius: var(--ax-radius-12);
  }
}

.aksel-data-table {
  border-collapse: collapse;
  border-spacing: 0;
  border-right: 1px solid var(--ax-border-neutral-subtle);
  border-bottom: 1px solid var(--ax-border-neutral-subtle);
}

.aksel-data-table__thead {
  box-shadow: 0 1px 0 0 var(--ax-border-neutral-subtle);
}

.aksel-data-table__cell {
  /* border doesn't work on sticky thead when we have collapsed borders, so using box-shadow instead */
  box-shadow: inset 1px 1px 0 0 var(--ax-border-neutral-subtle);
  text-align: start;
  vertical-align: middle;
  scroll-margin: var(--ax-space-0);

  .aksel-data-table__thead & {
    background-color: var(--ax-bg-neutral-soft);
  }

  &[data-align="left"] {
    text-align: start;
  }

  &[data-align="center"] {
    text-align: center;
  }

  &[data-align="right"] {
    text-align: end;
  }

  &[data-sticky] {
    position: sticky;
    z-index: 1;

    &::after {
      content: "";
      position: absolute;
      inset-block: 0;
      pointer-events: none;
      border-color: var(--ax-border-neutral-subtle);
      border-style: solid;
      border-width: 0;
    }

    &[data-sticky="start"] {
      left: 0;

      &::after {
        inset-inline: 0 -1px;
        border-right-width: 1px;
      }
    }

    &[data-sticky="end"] {
      right: 0;
    }

    background-color: var(--ax-bg-default);

    .aksel-data-table__thead & {
      background-color: var(--ax-bg-neutral-soft);
    }
  }

  &:focus-visible,
  /* Focus instead of focus-visible so that effect of sort-icon staying isnt strange */
  /* TODO: Update from th to generic */
  &:has(.aksel-data-table__th-sort-button:focus) {
    outline: 2px solid var(--ax-border-focus);
    outline-offset: -4px;
  }

  &[data-selectable="true"] {
    padding: 0;

    & > div {
      display: grid;
      place-content: center;
    }
  }

  &:not([data-selectable="true"]) > div {
    padding-block: var(--__axc-data-table-density);
    padding-inline: var(--ax-space-16);

    .aksel-data-table[data-truncate-content="true"] & {
      text-overflow: ellipsis;
      white-space: nowrap;
      overflow: hidden;
    }
  }
}

/* BORDER STYLING END */

.aksel-data-table__column-header {
  /* TODO: Might want this to be dynamic */
  --__axc-data-table-density: var(--ax-space-8);

  position: relative;
  font-weight: var(--ax-font-weight-bold);

  &:has(.aksel-data-table__th-sort-button):hover {
    background-color: var(--ax-bg-neutral-moderate-hover);
  }

  &:has(.aksel-data-table__th-sort-button):active {
    background-color: var(--ax-bg-neutral-moderate-pressed);
  }

  &[data-sortable="true"] {
    padding: 0;
    block-size: calc(var(--__axc-data-table-density) + 1.5rem);
  }
}

.aksel-data-table__th-sort-button {
  display: flex;
  align-items: center;
  gap: var(--ax-space-2);
  padding-inline-start: var(--ax-space-16);
  block-size: calc(var(--__axc-data-table-density) + 1.5rem);
  width: 100%;
  cursor: pointer;
  text-align: start;
  background-color: transparent;
  border: none;
  font-weight: inherit;

  &:focus-visible {
    outline: none;
  }
}

.aksel-data-table__th-sort-icon {
  flex-shrink: 0;
  margin-left: auto;

  &[data-sort-direction="none"] {
    visibility: hidden;
  }

  .aksel-data-table__th-sort-button:is(:hover, :focus-visible, :focus-within) & {
    visibility: visible;
  }

  .aksel-data-table[data-layout="fixed"] &[data-sort-direction="none"] {
    display: none;
  }

  .aksel-data-table[data-layout="fixed"] .aksel-data-table__th-sort-button:is(:hover, :focus-visible, :focus-within) & {
    display: block;
  }
}

.aksel-data-table__th-content {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.aksel-data-table__th-resize-handle {
  z-index: 2;
  position: absolute;
  cursor: col-resize;
  margin: 0;
  padding: 0;
  border: none;
  background: transparent;
  display: flex;
  justify-content: center;
  inset-block: 0;
  inset-inline-end: -10px;
  width: 19px; /* TODO: Violation of WCAG SC 2.5.8 Target Size? https://www.w3.org/WAI/WCAG22/Understanding/target-size-minimum.html */

  &:focus-visible {
    outline: 2px solid var(--ax-border-focus);
    outline-offset: -4px;
    border-radius: var(--ax-radius-8);
  }

  &::after {
    content: "";
    position: absolute;
    inset-block: 0;
    width: 3px;
    height: 75%;
    top: 50%;
    transform: translateY(-50%);
    border-radius: var(--ax-radius-full);
    transition: background 50ms linear;
  }

  &:hover::after {
    /* TODO: Consider if the resize-handle should be visible already when hovering the column header */
    background: var(--ax-bg-strong);
  }

  &:active::after,
  &:focus-visible::after {
    background: var(--ax-bg-strong-pressed);
  }

  .aksel-data-table__th:last-of-type & {
    inset-inline-end: 0;
    width: 15px;

    &::after {
      inset-inline-end: 0;
    }
  }

  &[data-active="true"] {
    .aksel-data-table__th-resize-handle-indicator {
      position: absolute;
      top: 50%;
      color: var(--ax-bg-strong);
      transform: translateY(-50%);
      height: 1.5rem;

      &.aksel-data-table__th-resize-handle-indicator--start {
        right: 12px;
      }

      &.aksel-data-table__th-resize-handle-indicator--end {
        left: 12px;
      }
    }

    &::after {
      background: var(--ax-bg-strong);
    }

    &:focus-visible,
    &:focus,
    &:active {
      outline: none;
    }
  }
}

.aksel-data-table__th-action-button {
  transition: 0.1s ease-in-out;

  /* TODO: Animating all these sort of "stutters" a little now. Can some be removed? */
  transition-property: opacity, width, min-width, max-width, padding;

  &:focus-visible {
    transition: none;
  }

  &:not(.aksel-data-table__th:is(:hover, :focus-within) &, &:focus-visible, &[data-expanded="true"]),
  .aksel-data-table__th:has(.aksel-data-table__th-resize-handle:hover:not(:focus)) & {
    opacity: 0;
    min-width: 0;
    max-width: 0;
    padding: 0;
    overflow: hidden;
  }
}

.aksel-data-table__th {
  scroll-margin-block: var(--ax-space-0);
  scroll-margin-inline: var(--ax-space-0);

  &:focus-visible,
  /* Focus instead of focus-visible so that effect of sort-icon staying isnt strange */
  &:has(.aksel-data-table__th-sort-button:focus) {
    outline: 2px solid var(--ax-border-focus);
    outline-offset: -4px;
  }

  &[data-selectable="true"] {
    padding: 0;

    & > div {
      display: grid;
      place-content: center;
    }
  }
}

.aksel-data-table__tfoot {
  background-color: var(--ax-bg-raised);
}

.aksel-data-table__filler-cell {
  width: auto;
  display: table-cell;
  padding: 0;
}

.aksel-data-drag-and-drop__drag-handler__button {
  height: 1.5rem;
  position: relative;
  background: transparent;
  border: none;
  padding: 0;

  &:hover {
    cursor: grab;
  }

  &:focus-visible,
  &[data-drag-handler-active="true"] {
    outline: 2px solid var(--ax-border-focus);
    outline-offset: -1px;
    border-radius: var(--ax-radius-8);
  }
}

.aksel-data-table__drag-and-drop-item {
  background-color: var(--ax-bg-default);

  &[data-overlay="true"] {
    width: 100%;
    opacity: 0.8;
    box-shadow: var(--ax-shadow-dialog);
  }

  /* TODO - might be removable */
  &[data-keyboard-dragging="true"] {
    .aksel-data-drag-and-drop__drag-handler__button {
      outline: 2px solid var(--ax-border-focus);
      outline-offset: -1px;
      border-radius: var(--ax-radius-8);
    }
  }

  &[data-drop-target="true"]:not([data-overlay="true"]) {
    background: var(--ax-bg-neutral-moderate);
  }
}

.aksel-data-drag-and-drop__drag-handler__alt,
.aksel-data-drag-and-drop__drag-handler {
  position: relative;
  height: 1.5rem;

  .aksel-data-drag-and-drop__drag-handler__arrow {
    height: 1.8rem;
    position: absolute;
    left: 50%;
    transform: translate(-50%, -50%);
    background: var(--ax-bg-default);
    border: none;
    cursor: pointer;
    padding: 0;
    border-radius: 50%;
    z-index: 1;

    &[data-direction="up"] {
      top: -18px;
    }

    &[data-direction="down"] {
      bottom: calc(-100% - 22px);
    }

    &:disabled {
      opacity: 0.8;
      cursor: not-allowed;
    }
  }
}

.aksel-data-table__empty-state {
  display: grid;
  place-content: center;
  padding-block: var(--ax-space-32);
  padding-inline: var(--ax-space-16);
  text-align: center;
  gap: var(--ax-space-8);
  justify-items: center;
}

.aksel-data-table__loading-state {
  display: grid;
  place-content: center;
  padding-block: var(--ax-space-32);
  padding-inline: var(--ax-space-16);
  text-align: center;
  gap: var(--ax-space-8);
  justify-items: center;
  position: relative;

  &::before {
    content: "";
    position: absolute;
    inline-size: 100%;
    block-size: 2px;
    inset-block-start: -1px;
    background-color: var(--ax-bg-strong);
    animation: animateDataTableLoading 1s linear infinite;
  }
}

@keyframes animateDataTableLoading {
  0% {
    inset-inline-start: 0;
    inline-size: 0;
  }

  20% {
    inset-inline-start: 0;
    inline-size: 40%;
  }

  80% {
    inset-inline-start: 60%;
    inline-size: 40%;
  }

  100% {
    inset-inline-start: 100%;
    inline-size: 0;
  }
}

/* TODO: Look to handle "inline"-checkbox better than custom CSS-overrides in the future. */
.aksel-data-table tr .aksel-checkbox {
  padding: 0;
}

.aksel-data-table tr .aksel-checkbox:focus-within::after {
  inset: 0;
}

/* TODO -
* This is needed to prevent the cursor from changing back to default when dragging over interactive elements in the row.
* Not sure if this is the best approach or breaks styling elsewhere */
html[data-dragging-cursor="true"],
html[data-dragging-cursor="true"] *,
html[data-dragging-cursor="true"] *::before,
html[data-dragging-cursor="true"] *::after {
  cursor: grabbing !important;
}

